test/files/detach-neg/det_bar.check
det_bar.scala:7: error: detach inapplicable for method bar
  detach(bar)
         ^
one error found
